--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hypy (0.8.1~ppa2) intrepid; urgency=low
+
+  * Missing cdbs build-dep
+
+ -- Cory Dodt <launchpad@spam.goonmill.org>  Mon, 15 Dec 2008 18:49:04 -0800
+
 hypy (0.8.1~ppa1) intrepid; urgency=low
 
   * Initial public releasery.
