--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-hypy (0.8.2~ppa1) hardy; urgency=low
+
+  * fix the ez_setup import which made it hard to easy_install 
+    (closes: #319382)
+
+ -- Cory Dodt <launchpad@spam.goonmill.org>  Tue, 20 Jan 2009 19:47:20 -0800
+
 python-hypy (0.8.1~ppa2) intrepid; urgency=low
 
   * Missing cdbs build-dep
