--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ python-hypy (0.8.4~ppa1) karmic; urgency=low
 
   * Improvements in the release testing (closes: #335481)
 
- -- cory <launchpad@spam.goonmill.org>  Sat, 19 Sep 2009 23:33:51 -0700
+ -- Cory Dodt <launchpad@spam.goonmill.org>  Sat, 19 Sep 2009 23:33:51 -0700
 
 python-hypy (0.8.3~ppa1) intrepid; urgency=low
 
